# jse

./: .gitattributes  .gitignore  README.md  build.gradle
doc/: atomdata.md  codeJava.md  commandline.md  contents.md  filestructure.md  io.md  jseinpython.md  jupyter.ipynb  lammps.md  math.md  mpc.md  mpi.md  nativelmp.md  nnapversion.md  pythoningroovy.md  system.md  systemAPI.md  systemSSH.md  usage.md  vasp.md
doc_agent/: MAIN_groovy.md  apc.md  atom.md  io.md  math.md  pot.md  python.md  utils.md
example/: .gitignore  porousLmp.groovy
example/code/apc/: aboop.groovy  boop.groovy  connectcount.groovy  rdf.groovy  rdfmulti.groovy  rdfsf.groovy  sf.groovy  voronoi.groovy
example/code/atoms/: array.groovy  extxyz.groovy  init1.groovy  init2.groovy  transform.groovy
example/code/cross/: jse1.py  jse2.py  jse3.py  python1.groovy  python2.groovy  python3.groovy  python4.groovy
example/code/include/: addjpath.m  plotAtomData.m  rmjpath.m
example/code/io/: datacsv.groovy  datajsonyaml.groovy  fileopt.groovy  readwrite1.groovy  zip.groovy
example/code/lmp/: data.groovy  dump.groovy  dumptable.groovy  log.groovy  native.groovy  setatom.groovy  (+1 more)
example/vasp/: .gitignore
release/: .gitattributes  .gitignore  jTool  jTool.bat  jse  jse.bat  jtool
release/.run/: jTool-RunCurrentScript.run.xml  jse-RunCurrentScript.run.xml  jse-RunShell.run.xml  jtool-RunCurrentScript.run.xml  jtool-RunShell.run.xml
release/lib/: .gitignore
release/script/: testSSH.groovy
scripts/: get.ps1  get.sh
src/main/resources/assets/cpointer/src/: CMakeLists.txt  jse_clib_CPointer.c  jse_clib_CPointer.h  jse_clib_DoubleCPointer.c  jse_clib_DoubleCPointer.h  jse_clib_FloatCPointer.c  jse_clib_FloatCPointer.h  jse_clib_IntCPointer.c  jse_clib_IntCPointer.h  jse_clib_NestedDoubleCPointer.c  jse_clib_NestedDoubleCPointer.h  jse_clib_NestedIntCPointer.c  jse_clib_NestedIntCPointer.h  jse_cptr_AnyCPointer.c  jse_cptr_AnyCPointer.h  jse_cptr_CPointer.c  jse_cptr_CPointer.h  jse_cptr_DoubleCPointer.c  jse_cptr_DoubleCPointer.h  jse_cptr_FloatCPointer.c  jse_cptr_FloatCPointer.h  jse_cptr_Int64CPointer.c  jse_cptr_Int64CPointer.h  jse_cptr_IntCPointer.c  jse_cptr_IntCPointer.h  jse_cptr_NestedCPointer.c  jse_cptr_NestedCPointer.h  jse_cptr_NestedDoubleCPointer.c  jse_cptr_NestedDoubleCPointer.h  jse_cptr_NestedFloatCPointer.c  jse_cptr_NestedFloatCPointer.h  jse_cptr_NestedIntCPointer.c  jse_cptr_NestedIntCPointer.h
src/main/resources/assets/cudacore/src/: CMakeLists.txt  cudacore_util.h  jse_gpu_CudaCore.cpp  jse_gpu_CudaCore.h  jse_gpu_DoubleCudaPointer.cpp  jse_gpu_DoubleCudaPointer.h  jse_gpu_FloatCudaPointer.cpp  jse_gpu_FloatCudaPointer.h  jse_gpu_Int64CudaPointer.cpp  jse_gpu_Int64CudaPointer.h  jse_gpu_IntCudaPointer.cpp  jse_gpu_IntCudaPointer.h  jse_gpu_NestedCudaPointer.cpp  jse_gpu_NestedCudaPointer.h
src/main/resources/assets/jep/jep-4.2.0-src/: CMakeLists.txt
src/main/resources/assets/jep/jep-4.2.0-src/src/main/c/Include/: jep_Jep.h  jep_MainInterpreter.h  jep_python_InvocationHandler.h  jep_python_PyCallable.h  jep_python_PyObject.h  jep_python_PyPointer.h  jep_util.h
src/main/resources/assets/jep/jep-4.2.0-src/src/main/c/Jep/: convert_j2p.c  convert_p2j.c  jep.c  jep_exceptions.c  jep_numpy.c  jep_util.c  pyembed.c
src/main/resources/assets/jep/jep-4.2.0-src/src/main/c/Jep/python/: jep_object.c
src/main/resources/assets/jep/jep-4.2.0-src/src/main/c/Objects/: pyjclass.c
src/main/resources/assets/jitengine/src/: CMakeLists.txt  jse_clib_JITLibHandle.h  jse_clib_SimpleJIT.c  jse_clib_SimpleJIT.h  jse_jit_JITLibHandle.h  jse_jit_SimpleJIT.c  jse_jit_SimpleJIT.h
src/main/resources/assets/jniutil/src/: CMakeLists.txt  jniutil.c  jniutil.h
src/main/resources/assets/lmp/src/: CMakeLists.txt  jse_lmp_NativeLmp.c  jse_lmp_NativeLmp.cpp  jse_lmp_NativeLmp.h  jse_lmp_NativeLmpPointer.h  jtool_lmp_NativeLmp.c  jtool_lmp_NativeLmp.h  lmpjni_util.hpp
src/main/resources/assets/lmpplugin/src/: CMakeLists.txt  LmpPair.cpp  LmpPair.h  LmpPlugin.cpp  fix_jse.cpp  fix_jse.h  jse_lmp_LmpPlugin_Fix.cpp  jse_lmp_LmpPlugin_Fix.h  jse_lmp_LmpPlugin_Pair.cpp  jse_lmp_LmpPlugin_Pair.h  jseplugin.cpp  pair_jse.cpp  pair_jse.h
src/main/resources/assets/math/src/: CMakeLists.txt  jse_math_operation_ARRAY_Native.c  jse_math_operation_ARRAY_Native.h  math_util.h
src/main/resources/assets/mpi/src/: CMakeLists.txt  jse_parallel_MPI_Native.c  jse_parallel_MPI_Native.h  jtool_parallel_MPI_Native.c  jtool_parallel_MPI_Native.h
src/main/resources/assets/mpisrc/: CMakeLists.txt  jtool_parallel_MPI_Native.c
src/nnap/resources/assets/nnap/src/: .gitignore  CMakeLists.txt  basis_Chebyshev.hpp  basis_ChebyshevUtil.hpp  basis_EquivariantSphericalChebyshev.hpp  basis_EquivariantUtil.hpp  basis_MultiLayerSphericalChebyshev.hpp  basis_MultiSphericalChebyshev.hpp  basis_MultiUtil.hpp  basis_SphericalChebyshev.hpp  basis_SphericalUtil.hpp  basis_SphericalUtil0.hpp  jsex_nnap_NNAP.cpp  jsex_nnap_NNAP.h  jsex_nnap_basis_Chebyshev.c  jsex_nnap_basis_Chebyshev.cpp  jsex_nnap_basis_Chebyshev.h  jsex_nnap_basis_EquivariantSphericalChebyshev.cpp  jsex_nnap_basis_EquivariantSphericalChebyshev.h  jsex_nnap_basis_MultiLayerSphericalChebyshev.cpp  jsex_nnap_basis_MultiLayerSphericalChebyshev.h  jsex_nnap_basis_MultiSphericalChebyshev.cpp  jsex_nnap_basis_MultiSphericalChebyshev.h  jsex_nnap_basis_SphericalChebyshev.c  jsex_nnap_basis_SphericalChebyshev.cpp  jsex_nnap_basis_SphericalChebyshev.h  jsex_nnap_nn_FeedForward.c  jsex_nnap_nn_FeedForward.cpp  jsex_nnap_nn_FeedForward.h  jsex_nnap_nn_SharedFeedForward.cpp  jsex_nnap_nn_SharedFeedForward.h  nn_FeedForward.hpp  nnap_interface.cpp  nnap_interface_cuda.cu  nnap_main.hpp  nnap_util.h  nnap_util.hpp
src/nnap/resources/assets/nnap2/src/: CMakeLists.txt  basis_Chebyshev.hpp  basis_ChebyshevUtil.hpp  basis_SphericalChebyshev.hpp  basis_SphericalUtil.hpp  basis_SphericalUtil0.hpp  nn_FeedForward.hpp  nnap_interface.cpp  nnap_interface.h  nnap_interface_cuda.cu  nnap_interface_cuda.h  nnap_interface_gpu.cu  nnap_interface_gpu.h  nnap_main.hpp  nnap_util.hpp
(+1772 files in other folders)
